k8s/namespaces/atlantis/01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  namespace: atlantis
  labels:
    app.kubernetes.io/name: atlantis
    app.kubernetes.io/part-of: atlantis
spec:
  type: ClusterIP
  ports:
  - port: 4141
    targetPort: 4141
    protocol: TCP
  selector:
    app.kubernetes.io/name: atlantis
