k8s/namespaces/atlantis/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: atlantis
  labels:
    app.kubernetes.io/name: atlantis
    app.kubernetes.io/part-of: atlantis

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: atlantis
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
